--- a/src/src.csproj
+++ b/src/src.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Dapper" Version="2.1.21" />
     <PackageReference Include="Faker.net" Version="2.0.154" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.2" />
+    <PackageReference Include="Spectre.Console" Version="0.47.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
